# polars-marketing-insights

./: README.md  main.py  pyproject.toml
reports/: report.html  report.quarto_ipynb
src/marketing_analysis/: __init__.py  analyzer.py  utils.py  visualization.py
templates/: marketing_report.qmd
